--- a/osa8/kirjasto-backend/package.json
+++ b/osa8/kirjasto-backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
-    "uuid": "^10.0.0"
+    "mongoose": "^8.5.1",
+    "mongoose-unique-validator": "^5.0.1"
   }
 }
